# c-learning

Management_system/: CMakeLists.txt
Management_system/include/: boss.h  employee.h  manager.h  worker.h  workerManager.h
Management_system/src/: CMakeLists.txt  boss.cpp  employee.cpp  main.cpp  manager.cpp  workerManager.cpp
fast_test/: CMakeLists.txt  main.cpp
fast_test/data/: calibdata.txt
fast_test/src/: string01.cpp  string02.cpp  string03.cpp  string04.cpp  string05.cpp  vector01.cpp  vector02.cpp  vector03.cpp  vector04.cpp
superpower19classifier/: CMakeLists.txt  classifier.hpp  test.cpp
